--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,11 @@ dependencies:
   toggle_switch: ^2.1.0
   local_auth: ^2.1.6
   dotted_line: ^3.2.2
+  # image_picker
+  image_picker: ^1.0.5
+  # pull_to_refresh: 
+  pull_to_refresh: ^2.0.0
+  flutter_spinkit: ^5.1.0
 
 dev_dependencies:
   flutter_test:
