--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,10 @@ dependencies:
   # pull_to_refresh: 
   pull_to_refresh: ^2.0.0
   flutter_spinkit: ^5.1.0
+   # long screen shot
+  scroll_screenshot: ^0.0.4
+  path_provider: ^2.0.12
+  gallery_saver: ^2.3.2
 
 dev_dependencies:
   flutter_test:
